--- a/app/templates/admin/tests/diabetes.jinja
+++ b/app/templates/admin/tests/diabetes.jinja
@@ -3,22 +3,22 @@
 {% block fields %}
 <tr>
     <td><label for="glucose">Plasma glucose concentration:</label></td>
-    <td><input type="number" id="glucose" name="glucose" min="0" style="width: 68px;" required></td>
+    <td><input type="number" name="glucose" min="0" required></td>
 </tr>
 <tr>
     <td><label for="blood_pressure">Diastolic blood pressure (mm Hg):</label></td>
-    <td><input type="number" id="blood_pressure" name="blood_pressure" min="0" style="width: 68px;" required></td>
+    <td><input type="number" name="blood_pressure" min="0" required></td>
 </tr>
 <tr>
     <td><label for="skin_thickness">Triceps skin fold thickness (mm):</label></td>
-    <td><input type="number" id="skin_thickness" name="skin_thickness" min="0" style="width: 68px;" required></td>
+    <td><input type="number" name="skin_thickness" min="0" required></td>
 </tr>
 <tr>
     <td><label for="insulin">2-Hour serum insulin (mu U/ml):</label></td>
-    <td><input type="number" id="insulin" name="insulin" min="0" style="width: 68px;" required></td>
+    <td><input type="number" name="insulin" min="0" required></td>
 </tr>
 <tr>
     <td><label for="pedigree">Diabetes pedigree function:</label></td>
-    <td><input type="number" id="pedigree" name="pedigree" min="0" style="width: 68px;" required></td>
+    <td><input type="number" name="pedigree" min="0" required></td>
 </tr>
 {% endblock fields %}
