--- a/app/templates/admin/tests/heart failure.jinja
+++ b/app/templates/admin/tests/heart failure.jinja
@@ -2,34 +2,34 @@
 
 {% block fields %}
 <tr>
-    <td><label for="cpk">Creatinine Phosphokinase (mcg/L):</label></td>
-    <td><input type="number" id="cpk" name="cpk" required style="width: 68px;"></td>
+    <td><label for="creatinine_phosphokinase">Creatinine Phosphokinase (mcg/L):</label></td>
+    <td><input type="number" name="cpk" required></td>
 </tr>
 <tr>
     <td><label for="ejection_fraction">Ejection Fraction (%):</label></td>
-    <td><input type="number" id="ejection_fraction" name="ejection_fraction" required style="width: 68px;"></td>
+    <td><input type="number" name="ejection_fraction" required></td>
 </tr>
 <tr>
     <td><label for="platelets">Platelets (kiloplatelets/mL):</label></td>
-    <td><input type="number" id="platelets" name="platelets" required style="width: 68px;"></td>
+    <td><input type="number" name="platelets" required></td>
 </tr>
 <tr>
     <td><label for="serum_creatinine">Serum Creatinine (mg/dL):</label></td>
-    <td><input type="number" id="serum_creatinine" name="serum_creatinine" required style="width: 68px;"></td>
+    <td><input type="number" name="serum_creatinine" required></td>
 </tr>
 <tr>
     <td><label for="serum_sodium">Serum Sodium (mEq/L):</label></td>
-    <td><input type="number" id="serum_sodium" name="serum_sodium" required style="width: 68px;"></td>
+    <td><input type="number" name="serum_sodium" required></td>
 </tr>
 <tr>
-    <td colspan="2"><input type="checkbox" id="anaemia" name="anaemia"><label for="anaemia">Anaemia</label></td>
+    <td colspan="2"><input type="checkbox" name="anaemia"><label for="anaemia">Anaemia</label></td>
 </tr>
 <tr>
-    <td colspan="2"><input type="checkbox" id="diabetes" name="diabetes"><label for="diabetes">Diabetes</label></td>
+    <td colspan="2"><input type="checkbox" name="diabetes"><label for="diabetes">Diabetes</label></td>
 </tr>
 <tr>
     <td colspan="2">
-        <input type="checkbox" id="high_blood_pressure" name="high_blood_pressure">
+        <input type="checkbox" name="high_blood_pressure">
         <label for="high_blood_pressure">High Blood Pressure</label>
     </td>
 </tr>
