--- a/app/templates/appointments/appoint.jinja
+++ b/app/templates/appointments/appoint.jinja
@@ -32,7 +32,7 @@ Appointments
             <option disabled>pick a day first</option>
         </select><br><br>
         <button class="blue btn" type="submit">Create Appointment</button><br>
-        <button onclick="window.history.back()" class="btn" style="color: black; margin-left: 20%;">
+        <button onclick="window.history.back()" class="mid btn" style="color: black; min-width: 85px;">
             Go Back
         </button>
     </div>
