--- a/app/templates/index.jinja
+++ b/app/templates/index.jinja
@@ -21,7 +21,7 @@ Information
             <br><br>
             <label for="birth_year">Birth Year: </label>
             <input {% if user_info["birth_year"] !=None %} value="{{ user_info['birth_year'] }}" {% endif %}
-                type="number" id="birth_year" name="birth_year" min="1900" max="{{current_year}}" style="width: 68px;">
+                type="number" id="birth_year" name="birth_year" min="1900" max="{{current_year}}">
             <br><br>
             <label>Gender:</label><br>
             <input type="radio" id="male" name="gender" value="1" {% if user_info["gender"] %} checked {% endif %}>
@@ -31,11 +31,11 @@ Information
             <br><br>
             <label for="height">Height (cm)</label>
             <input {% if user_info["height"] !=None %} value="{{ user_info['height'] }}" {% endif %} type="number"
-                id="height" name="height" min="0" style="width: 68px;">
+                id="height" name="height" min="0">
             <br><br>
             <label for="weight">Weight (kg)</label>
             <input {% if user_info["weight"] !=None %} value="{{ user_info['weight'] }}" {% endif %} type="number"
-                id="weight" name="weight" min="0" style="width: 68px;">
+                id="weight" name="weight" min="0">
             <br><br>
             <label>Ever got married:</label><br>
             <input type="radio" id="married_yes" name="married" value="1" {% if user_info["married"] %} checked {% endif
@@ -72,7 +72,7 @@ Information
             <br><br>
             <label for="pregnancies">Number of Pregnancies:</label><br>
             <input {% if user_info["pregnancies"] !=None %} value="{{ user_info['pregnancies'] }}" {% endif %}
-                type="number" id="pregnancies" name="pregnancies" min="0" style="width: 68px;">
+                type="number" id="pregnancies" name="pregnancies" min="0">
             <br><br>
             <input type="checkbox" id="exng" name="exng" value="1" {% if user_info["exng"] %} checked {% endif %}>
             <label for="exng">Exercise Induced Angina</label>
