--- a/app/templates/admin/tests/stroke.jinja
+++ b/app/templates/admin/tests/stroke.jinja
@@ -3,11 +3,11 @@
 {% block fields %}
 <tr>
     <td><label for="glucose">Average glucose level in blood:</label></td>
-    <td><input type="number" id="glucose" name="glucose" min="0" style="width: 68px;" required></td>
+    <td><input type="number" name="glucose" min="0" required></td>
 </tr>
 <tr>
     <td colspan="2">
-        <input type="checkbox" id="hypertension" name="hypertension">
+        <input type="checkbox" name="hypertension">
         <label for="hypertension">Hypertension</label>
     </td>
 </tr>
