--- a/app/templates/admin/tests/heart failure.jinja
+++ b/app/templates/admin/tests/heart failure.jinja
@@ -2,8 +2,8 @@
 
 {% block fields %}
 <tr>
-    <td><label for="creatinine_phosphokinase">Creatinine Phosphokinase (mcg/L):</label></td>
-    <td><input type="number" name="cpk" required></td>
+    <td><label for="creatinine_phosphokinase">Creatinine Phosphokinase (mcg/L):</label></td> <!-- cpk -->
+    <td><input type="number" name="creatinine_phosphokinase" required></td>
 </tr>
 <tr>
     <td><label for="ejection_fraction">Ejection Fraction (%):</label></td>
