--- a/app/templates/auth/login.jinja
+++ b/app/templates/auth/login.jinja
@@ -8,8 +8,8 @@ Log In
 <link href="/static/styles/auth.css" rel="stylesheet">
 <form action="/login" method="post">
     <p class="form-title">Sign in to your account</p>
-    <input autocomplete="off" autofocus name="username" placeholder="Enter username" type="text">
-    <input name="password" placeholder="Enter password" type="password">
+    <input autocomplete="off" autofocus name="username" placeholder="Enter username" type="text" required>
+    <input name="password" placeholder="Enter password" type="password" required>
     <button type="submit" class="submit">
         Sign in
     </button>
