--- a/app/templates/results.jinja
+++ b/app/templates/results.jinja
@@ -16,10 +16,10 @@ Results
     <table class="sortable">
         <thead>
             <tr>
-                <th scope="col">Time</th>
-                <th scope="col" class="sorttable_nosort">Location</th>
-                <th scope="col" class="sorttable_nosort">Type</th>
-                <th scope="col" class="sorttable_nosort">Open</th>
+                <th scope="col" class="sort">Time</th>
+                <th class="sorttable_nosort">Location</th>
+                <th class="sorttable_nosort">Type</th>
+                <th class="sorttable_nosort">Open</th>
             </tr>
         </thead>
         <tbody>
@@ -38,7 +38,6 @@ Results
     // TableFilter settings
     var tfConfig = {
         base_path: "static/scripts/TableFilter/",
-        col_widths: ["150px", "150px", "100px", "100px"],
         col_0: "none",
         col_1: "select",
         col_2: "select",
