--- a/app/templates/admin/appointments.jinja
+++ b/app/templates/admin/appointments.jinja
@@ -16,11 +16,11 @@ Appointments
     <table class="sortable">
         <thead>
             <tr>
-                <th scope="col" class="sorttable_nosort name">Name</th>
-                <th scope="col">Time</th>
-                <th scope="col" class="sorttable_nosort">Location</th>
-                <th scope="col" class="sorttable_nosort">Type</th>
-                <th scope="col" class="sorttable_nosort">Fill</th>
+                <th class="sorttable_nosort name">Name</th>
+                <th scope="col" class="sort">Time</th>
+                <th class="sorttable_nosort">Location</th>
+                <th class="sorttable_nosort">Type</th>
+                <th class="sorttable_nosort">Fill</th>
             </tr>
         </thead>
         <tbody>
@@ -44,7 +44,6 @@ Appointments
     // TableFilter settings
     var tfConfig = {
         base_path: "static/scripts/TableFilter/",
-        col_widths: ["250px", "150px", "150px", "100px", "100px"],
         col_1: "none",
         col_2: "select",
         col_3: "select",
