--- a/app/templates/admin/appointments.jinja
+++ b/app/templates/admin/appointments.jinja
@@ -34,7 +34,9 @@ Appointments
                 <td>{{ row.time }}</td>
                 <td>{{ row.location }}</td>
                 <td>{{ row.type }}</td>
-                <td><a href="/fill?id={{row.id}}">📃</a></td>
+                <td><a href="/fill?id={{row.id}}">
+                        <img src="/static/pics/fill.svg" style="height: 1rem;">
+                    </a></td>
             </tr>
             {% endfor %}
         </tbody>
