--- a/app/templates/layout.jinja
+++ b/app/templates/layout.jinja
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/static/logo/logo.ico">
+    <link rel="icon" href="/static/pics/logo/logo.ico">
     <link href="/static/styles/styles.css" rel="stylesheet">
     <script src="/static/scripts/htmx.min.js"></script>
     <meta name="theme-color" content="#545454" />
@@ -13,16 +13,22 @@
 
 <body>
     <div class="navbar">
-        <div class="navbar-logo"><img src="/static/logo/logo.svg" style="height: 1.7rem; translate: -15% 15%;">
+        <div class="navbar-logo"><img src="/static/pics/logo/logo.svg" style="height: 1.7rem; translate: -15% 15%;">
             MedLab
         </div>
         {% if session["user_id"] %}
         <ul class="navbar-tabs">
             <a class="navbar-tab" href="/">
-                {% if session["user_id"] == 1 %}📊 Dashboard{% else %}ℹ️ Information{%endif %}
+                {% if session["user_id"] == 1 %}
+                <img src="/static/pics/dashboard.svg" style="height: 1rem;" class="white">&nbsp;Dashboard
+                {% else %}
+                <img src="/static/pics/information.svg" style="height: 1rem;" class="white">&nbsp;Information
+                {% endif %}
             </a>
-            <a class="navbar-tab" href="/appointments">🗓️ Appointments</a>
-            <a class="navbar-tab" href="/results">📄 Results</a>
+            <a class="navbar-tab" href="/appointments">
+                <img src="/static/pics/appointments.svg" style="height: 1rem;" class="white">&nbsp;Appointments</a>
+            <a class="navbar-tab" href="/results">
+                <img src="/static/pics/results.svg" style="height: 1rem;" class="white">&nbsp;Results</a>
         </ul>
         <a class="logout" href="/logout">Log Out</a>
         {% endif %}
@@ -31,10 +37,24 @@
     <div class="center">
         <div class="tab-bar">
             <a class="navbar-tab" href="/">
-                {% if session["user_id"] == 1 %}<span>📊</span>Dashboard{% else %}<span>ℹ️</span> Information{%endif %}
+                {% if session["user_id"] == 1 %}
+                <span>
+                    <img src="/static/pics/dashboard.svg" style="height: 1rem;" class="white">
+                </span>Dashboard
+                {% else %}
+                <span>
+                    <img src="/static/pics/information.svg" style="height: 1rem;" class="white">
+                </span>Information
+                {%endif %}
             </a>
-            <a class="navbar-tab" href="/appointments"><span>🗓️</span>Appointments</a>
-            <a class="navbar-tab" href="/results"><span>📄</span>Results</a>
+            <a class="navbar-tab" href="/appointments">
+                <span>
+                    <img src="/static/pics/appointments.svg" style="height: 1rem;" class="white">
+                </span>Appointments</a>
+            <a class="navbar-tab" href="/results">
+                <span>
+                    <img src="/static/pics/results.svg" style="height: 1rem;" class="white">
+                </span>Results</a>
         </div>
     </div>
     {% endif %}
