--- a/app/templates/admin/user.jinja
+++ b/app/templates/admin/user.jinja
@@ -4,7 +4,7 @@
 User Information
 {% endblock %}
 
-{% set tab_number = 1 %}
+{% set tab_number = tab %}
 
 {% block main %}
 <link rel="stylesheet" href="/static/styles/form.css">
