--- a/app/templates/admin/tests/diabetes.jinja
+++ b/app/templates/admin/tests/diabetes.jinja
@@ -19,6 +19,6 @@
 </tr>
 <tr>
     <td><label for="pedigree">Diabetes pedigree function:</label></td>
-    <td><input type="number" name="pedigree" min="0" required></td>
+    <td><input type="number" name="pedigree" min="0" required step="any"></td>
 </tr>
 {% endblock fields %}
