--- a/app/templates/admin/tests/heart failure.jinja
+++ b/app/templates/admin/tests/heart failure.jinja
@@ -11,11 +11,11 @@
 </tr>
 <tr>
     <td><label for="platelets">Platelets (kiloplatelets/mL):</label></td>
-    <td><input type="number" name="platelets" required></td>
+    <td><input type="number" name="platelets" required step="any"></td>
 </tr>
 <tr>
     <td><label for="serum_creatinine">Serum Creatinine (mg/dL):</label></td>
-    <td><input type="number" name="serum_creatinine" required></td>
+    <td><input type="number" name="serum_creatinine" required step="any"></td>
 </tr>
 <tr>
     <td><label for="serum_sodium">Serum Sodium (mEq/L):</label></td>
