--- a/app/templates/results/result.jinja
+++ b/app/templates/results/result.jinja
@@ -16,10 +16,23 @@ Test Result
         <td>{{ row.value | snake_case_to_title_case | on2positive }}</td>
     </tr>
     {% endfor %}
+    {{ classification }}
     <td colspan="2">
         <button onclick="window.history.back()" class="mid btn" style="color: black; min-width: 85px;">
             Go Back
         </button>
     </td>
 </table>
+<script>
+    // get the text content of the second to last td element
+    var td = document.getElementsByTagName('td');
+    var last_td = td[td.length - 2];
+    var classification = parseInt(last_td.textContent);
+
+    // replace the text content of the second to last tr element
+    var tr = document.getElementsByTagName('tr');
+    var last_tr = tr[tr.length - 2];
+    // last_tr.lastElementChild.textContent = classification === 1 ? 'Positive' : 'Negative';
+
+</script>
 {% endblock %}
